<resources>
    <string name="app_name">GymNotify</string>
    <string name="form">Custom Workout</string>
    <string name= "todayPage">Today\'s Workout</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_body_categories">BodyCategories</string>
    <string name="title_activity_body_parts">BodyParts</string>
    <string name="title_activity_workout">Workout</string>
    <string name="removeWorkout">Remove Workout</string>
    <string name="mainFocus">Body Parts:</string>
    <string name="disclaimer">DISCLAIMER! NOT ALL WORKOUT TUTORIALS ARE AVAILABLE. ONLY BASIC TUTORIALS</string>
    <string name="todayWorkout">Today\'s Workout</string>
    <string name="preWorkout">Pre Workouts</string>
    <string name="commonGymWorkouts" >Common Gym Workouts</string>
    <string name="outdoorWorkout">Outdoor Workouts</string>
    <string name="homeWorkout">Home Workouts</string>
    <string name="postWorkouts">PostWorkouts</string>
    <string name="commonGymVids">Common Gym Workout Video Tutorials</string>
    <string name="homeTutorials">Home Workout Tutorials</string>
    <string name="outdoorTutorials">Outdoor Workout Tutorials</string>
    <string-array name="spinnerAddItems">
        <item>Body Parts</item>
        <item>Workouts</item>
    </string-array>
</resources>
